tests/pass/PreDecrement.java
package pass;

public class PreDecrement {
    public int preDecrement(int x) {
        return --x;
    }
}
