tests/fail/PreDecrement.java
package fail;

import java.lang.System;

public class PreDecrement {
    public static void main(String[] args) {
        System.out.println(--'a');
    }
}
